# depends

./: .flake8  .gitignore  .pre-commit-config.yaml  .vimspector.json  Makefile  README.md  pyproject.toml  pyrightconfig.json
depends/: __init__.py  dependable.py  dependencies.py  depends.py  inject.py
tests/: test_inject.py
